--- a/Examples/Monocular/rasp.yaml
+++ b/Examples/Monocular/rasp.yaml
@@ -5,34 +5,22 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 539.98071527499326
-Camera.fy: 539.20740497710642
-Camera.cx: 481.43689500883789
-Camera.cy: 263.01512421531191
+Camera.fx: 323.944
+Camera.fy: 324.105
+Camera.cx: 165.782
+Camera.cy: 117.938
 
-Camera.k1: 0.0
-Camera.k2: 0.0
-Camera.p1: 0.0
-Camera.p2: 0.0
-Camera.k3: 0.0
-
-Camera.width: 960
-Camera.height: 540
+Camera.k1: 0.08525391
+Camera.k2: -0.1509824
+Camera.p1: -0.0006811
+Camera.p2: 0.00335845
+Camera.k3: -0.2512114
 
 # Camera frames per second 
 Camera.fps: 15.0
 
-# IR projector baseline times fx (aprox.)
-Camera.bf: 28.16
-
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
-
-# Close/Far threshold. Baseline times.
-ThDepth: 50.0
-
-# Deptmap values factor 
-DepthMapFactor: 1000.0
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
@@ -56,9 +44,9 @@ ORBextractor.minThFAST: 7
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
-#--------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------
 Viewer.KeyFrameSize: 0.05
-Viewer.KeyFrameLineWidth: 3
+Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
 Viewer.PointSize:2
 Viewer.CameraSize: 0.08
@@ -68,7 +56,3 @@ Viewer.ViewpointY: -0.7
 Viewer.ViewpointZ: -1.8
 Viewer.ViewpointF: 500
 
-#--------------------------------------------------------------------------------------------
-# PointCloud Mapping
-#--------------------------------------------------------------------------------------------
-PointCloudMapping.Resolution: 0.02
